Align table columns with headers. fixes #1336

--- a/app/javascript/src/stylesheets/pages/case_contacts.scss
+++ b/app/javascript/src/stylesheets/pages/case_contacts.scss
@@ -27,7 +27,6 @@ legend {
     margin: 0px;
 }
 
-.dataTables_scrollHeadInner,
-.case-contacts-table {
+.dataTables_scrollHeadInner {
   width: 100% !important;
 }
